Update Startup scripts